--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.21",
+    "eslint": "^8.10.0",
+    "eslint-config-alloy": "^4.5.1",
+    "eslint-plugin-react": "^7.29.2",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
-    "typescript": "^4.1.2",
+    "typescript": "^4.6.2",
     "yorkie": "^2.0.0"
   }
 }
