--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
     "eslint-plugin-react": "^7.29.2",
     "lint-staged": "^10.0.7",
     "prettier": "^2.5.1",
+    "stylelint": "^14.5.3",
+    "stylelint-config-css-modules": "^3.0.0",
+    "stylelint-config-idiomatic-order": "^8.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "^4.6.2",
     "yorkie": "^2.0.0"
   }
